# architecture-drawio-automation

./: .gitignore  README 2.md  README.md
.github/: copilot-instructions.md
Installation Guide/: vscode-restart-formality 2.md
diagrams/: README.md
docs/: HLA.html  LLD.html  components_onepager.html  flow_onepager.html  installation.md  onepager.html  tool-reference.md  usage.md  wheel.md
drawio-mcp-server/: README.md  conftest.py  pyproject.toml
drawio-mcp-server/src/drawio_mcp_server/: __init__.py  __main__.py  server.py  types.py
drawio-mcp-server/src/drawio_mcp_server/drawio/: builder.py  gcp_icons.py  parser.py  shapes.py  summarize.py
drawio-mcp-server/src/drawio_mcp_server/tools/: __init__.py  add_connector_table.py  add_container.py  add_edge.py  add_node.py  add_title.py  create_diagram.py  list_diagrams.py  list_stories.py  read_diagram.py  read_story.py  read_summary.py  remove_element.py  update_node.py
drawio-mcp-server/src/drawio_mcp_server/util/: config.py  diagram_store.py  natural_sort.py  story_store.py
drawio-mcp-server/tests/: test_natural_sort.py  test_parser.py
examples/: sample-jira-story 2.txt
jira-stories/: PROJ-123-connectors.md.bak  PROJ-123.txt  PROJ-124.txt  PROJ-126-connectors.md.bak  README.md
policy/: unavailable_services 2.md
prompts/: create-diagram.md  update-diagram.md
scripts/: README 2.md  generate_connector_details 2.py  normalize_jira_story.py  reroute_diagram 2.py  verify_mcp 2.py
template/: README 2.md  create-multi-jira-prompt-template 2.md  create-single-jira-prompt-template 2.md  (+4 more)
wheels/: README.md  (+6 more)
(+21 files in other folders)
