[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drawio-mcp-server"
version = "0.1.0"
description = "MCP server exposing draw.io diagram read/create/update tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
# Used by scripts/normalize_jira_story.py to call Claude when the input
# Jira note is not already in canonical format. Pure-Python wheel —
# installs cleanly on macOS / Linux / Windows. Set ANTHROPIC_API_KEY to
# enable LLM rewrites; without it, the normalizer falls back to its
# delegate-payload mode and the calling LLM does the rewrite instead.
normalizer = [
    "anthropic>=0.40",
]

[project.scripts]
drawio-mcp-server = "drawio_mcp_server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/drawio_mcp_server"]
